# libseifg

./: .gitignore  CMakeLists.txt  PIPELINE.md  README.md  REFERENCES.md
cmake/: CompileShaders.cmake  GenerateShaderHeader.cmake
include/: lsfg_3_1.hpp  lsfg_3_1p.hpp  seifg.h
seifg-android/: .gitignore  CMakeLists.txt  NOTICE  README.md
seifg-android/src/: fpslimiter.cc  module.cc
seifg-android/src/capture/: vk_capture.cc  vk_capture.hh  xposed_bridge.cc
seifg-android/src/file_watch/: listener.cc  listener.hh
seifg-android/src/file_watch/dispatcher/: epoller.cc  epoller.hh  ipoller.hh
seifg-android/src/jni_helper/: jni_helper.cc  jni_helper.hh
seifg-android/src/present/: sc_present.cc  sc_present.hh  vsync_clock.cc  vsync_clock.hh
seifg-android/src/unity/: unity_engine.cc  unity_engine.hh
seifg-android/src/utility/: config.cc  config.hh  houdini.cc  houdini.hh  native_bridge.h
seifg-android/xposed/: .gitignore  build.gradle.kts  settings.gradle.kts
seifg-android/xposed/app/: build.gradle.kts
seifg-android/xposed/app/src/main/: AndroidManifest.xml
seifg-android/xposed/app/src/main/assets/: xposed_init
seifg-android/xposed/app/src/main/kotlin/com/seilent/sefg/: MainActivity.kt  NativeBridge.kt  XposedEntry.kt
seifg-android/xposed/app/src/main/kotlin/net/seilent/seifg/: MainActivity.kt  NativeBridge.kt  XposedEntry.kt
seifg-android/xposed/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
seifg-android/xposed/app/src/main/res/layout/: activity_main.xml
seifg-android/xposed/app/src/main/res/values/: strings.xml
seifg-decky/: .gitignore  main.py  package-lock.json  package.json  plugin.json
seifg-decky/defaults/: seifg
seifg-decky/src/: index.tsx
seifg-vk/: CMakeLists.txt  VkLayer_SEIFG_frame_generation.json  layer.cpp
shaders/: seifg_blend.comp  seifg_block_match_coarse.comp  seifg_block_match_coarse_qcom.comp  seifg_flow_filter.comp  seifg_grad_product.comp  seifg_lk_coarse.comp  seifg_lk_refine.comp  seifg_luma_convert.comp  seifg_occlusion.comp  seifg_pyramid_downsample.comp  seifg_refine_level.comp  seifg_refine_level_qcom.comp  seifg_sgsr.comp  seifg_warp.comp
src/: engine.cpp  engine.h  seifg.cpp
src/core/: command.cpp  command.h  descriptor.cpp  descriptor.h  device.cpp  device.h  image.cpp  image.h  pipeline.cpp  pipeline.h  sampler.cpp  sampler.h
tests/: dmabuf_roundtrip.cpp  flowtest.cpp  integration.cpp  pacetest.cpp  smoke.cpp  standalone.cpp  visualtest.cpp
